Improved display on tablets. Removed button-o-buggery reference

--- a/app/public/assets/styles/home.scss
+++ b/app/public/assets/styles/home.scss
@@ -142,15 +142,6 @@ header .container {
 }
 
 
-@media only screen and (max-width: 40em) {
-.button-o-buggery {
-	display: none;
-}
-
-.FacebookLogin {
-	float: center;	
-} }
-
 @media only screen and (max-width: 35em) {
 header {
 	font-size: 0.8em;
@@ -160,13 +151,18 @@ header {
 
 .branding, .login {
 	float: none;
+	display: block;
 	width: auto;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .branding img {
-	margin: 3.5% 0;
+	margin: 3.5% auto;
+}
+
+.FacebookLogin {
+	float: none;
 }
 
 .content {
